--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body::after {
 }
 
 .navbar a:hover{
-    color: var(--primary);
+    color: var(--brand-primary);
 }
 
 
@@ -110,9 +110,7 @@ p {margin: 10px 0;
 
 .container .logo{
     width: 110px;
-
-  
-    
+ 
 }
 
 .text-box {
@@ -130,7 +128,7 @@ p {margin: 10px 0;
 
 .text-box h4{
     font-family: 'Roboto', sans-serif;
-    color: var(--primary);
+    color: var(--brand-primary);
 
 }
 
@@ -142,7 +140,7 @@ p {margin: 10px 0;
 
 .btn-pre{ 
     margin-left: 950px;
-    background-color: var(--primary);
+    background-color: var(--brand-primary);
     font-family: 'Roboto', sans-serif;
     color: #000;
     padding: 8px 25px;
@@ -153,7 +151,7 @@ p {margin: 10px 0;
 
 .btn-test{ 
 
-    background-color: var(--primary);
+    background-color: var(--brand-primary);
     font-family: 'Roboto', sans-serif;
     background-color: #fff;
     color: #000;
