--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     color: #000;
     line-height: 1.6;
     height: 100vh;
-    background-image: url(./images/bg3.0.jpg);
+    background-image: url(./images/car-bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
