--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto&display=swap');
 
 :root{
-    --primary: #91D5FF;
-    --secoundary: 
+    --primary: #d5ffff;
+    --secondary: #00d9fa;
+    --tertiary: #007db8;
+    --quaternary:#5e5c5e;
+    --quinary:#003852;
 }
 
 *{
@@ -37,20 +40,17 @@ body::after {
 	box-shadow: inset 50px 100px 250px #000000, inset -50px -100px 250px #000000;
 }
 
-
 .navbar ul{
     list-style: none;
     display: flex;
     flex-direction: row;
     color: #fff;
     justify-content: space-around;
-    
 }
 
 .navbar a{
     padding: 0 135px;
     margin: 0.5px;
-    
 }
 
 .navbar a:hover{
@@ -70,7 +70,6 @@ li{
 a{
     text-decoration: none;
     color: #fff;
-    
 }
 
 h1, h2{
@@ -103,14 +102,10 @@ p {margin: 10px 0;
     width: 300px;
     text-align: center;
     z-index: 2;
-
  }
 
 .containers .logo{
-    width: 110px;
-
-  
-    
+    width: 110px; 
 }
 
 .text-box {
@@ -118,8 +113,6 @@ p {margin: 10px 0;
     z-index: 2;
     left: 100px;
     top: 360px;
-    
-    
 }
 
 .text-box h1{
@@ -129,7 +122,6 @@ p {margin: 10px 0;
 .text-box h4{
     font-family: 'Roboto', sans-serif;
     color: var(--primary);
-
 }
 
 .text-box p{
@@ -154,14 +146,12 @@ p {margin: 10px 0;
 
 
 .btn-test{ 
-
     background-color: var(--primary);
     font-family: 'Roboto', sans-serif;
     background-color: #fff;
     color: #000;
     padding: 8px 40px;
     font-size: 10px;
-
 }
 
 
@@ -172,7 +162,6 @@ p {margin: 10px 0;
     overflow: hidden;
     padding: 4rem 1rem;
     font-size: 10px;
-
 }
   
   
@@ -181,13 +170,12 @@ p {margin: 10px 0;
     grid-gap: 20px;
     grid-template-columns: repeat(4, 1fr);
     color: #fff;
-
 }
 
 
 .center {
     text-align: center;
-  }
+}
 
 footer {
     position: fixed;
