--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     margin: 0;
 }
 
+/* Forside + Overordnet Starter her */
+
 .body-index{
     font-family: 'Playfair Display', serif;
     font-weight: 400;
@@ -26,10 +28,6 @@
     background-position: center;
     background-repeat: no-repeat;
     display: block;
-}
-
-.body-leasing{
-    background-color: var(--quinary); 
 }
 
 body::after {
@@ -117,7 +115,7 @@ p {margin: 10px 0;
     position: absolute;
     z-index: 2;
     left: 100px;
-    top: 590px;
+    top: 360px;
 }
 
 .text-box h1{
@@ -135,7 +133,7 @@ p {margin: 10px 0;
 }
 
 .btn-pre{ 
-    margin-left: 90rem;
+    margin-left: 70rem;
     background-color: var(--primary);
     font-family: 'Roboto', sans-serif;
     color: #000;
@@ -173,13 +171,7 @@ p {margin: 10px 0;
     color: #fff;
 }
 
-.main-leasing {
-    font-family: 'Playfair Display', serif;
-    font-weight: 400;
-    font-size: 15px;
-    color: #000;
-    line-height: 1.6;
-}
+/* Footer */
 
 footer {
     position: fixed;
@@ -187,4 +179,23 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
+}
+
+/* Leasing Starter Her */
+
+.body-leasing{
+    background-color: var(--quinary); 
+}
+
+.main-leasing {
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    font-size: 15px;
+    color: #000;
+    line-height: 1.6;
+
+}
+
+.main-text-box{
+    color: #fff;
 }
