--- a/style.css
+++ b/style.css
@@ -136,26 +136,19 @@ p {margin: 10px 0;
 
 /* Jens Styling start */
 
-body.page_id_2{
-    background-image:none;
+.body-koncept{
+
     background-color: var(--quinary);
    }
 
-.p_2_box1, .p_2_box2 {
+.p_2_box {
     font-family: 'Playfair Display', serif;
     font-weight: 50;
     font-size: 15px;
     color: var(--secondary);  
     margin-left: 20%;
     margin-right: 20%; 
-    margin-top: 20rem;
 }
-
-.p_2_nav {
-    justify-content: ;
-}
-
-
 /* Jens Styling end */
 
 
