--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@
 .body-leasing{
     background-color: var(--quinary); 
 }
+}
+
+.body-design{
+    background-color: var(--quinary); 
+}
 
 body::after {
 	content: '';
