--- a/style.css
+++ b/style.css
@@ -193,9 +193,10 @@ footer {
     font-size: 15px;
     color: #000;
     line-height: 1.6;
-
 }
 
 .main-text-box{
     color: #fff;
+    padding-top: 15rem;
+    padding-left: 10rem;
 }
