--- a/style.css
+++ b/style.css
@@ -132,25 +132,6 @@ p {margin: 10px 0;
     font-size: 15px;
 }
 
-/* Jens Styling start */
-
-.body-koncept{
-
-    background-color: var(--quinary);
-   }
-
-.p_2_box {
-    font-family: 'Playfair Display', serif;
-    font-weight: 50;
-    font-size: 15px;
-    color: var(--secondary);  
-    margin-left: 20%;
-    margin-right: 20%; 
-}
-/* Jens Styling end */
-
-
-
 .btn-pre{ 
     margin-left: 70rem;
     background-color: var(--primary);
@@ -218,3 +199,35 @@ footer {
 .main-text-box{
     color: #fff;
 }
+
+
+
+
+
+
+
+
+
+
+/* Jens Styling start */
+
+.body-koncept{
+
+    background-color: var(--quinary);
+   }
+
+.p_2_box {
+    font-family: 'Playfair Display', serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.6;
+    color: var(--primary);  
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
+    padding: 20%;
+    padding-top: 10%;
+
+
+}
+
+/* Jens Styling end */
