Tilføjede design html side

--- a/style.css
+++ b/style.css
@@ -28,13 +28,12 @@
     display: block;
 }
 
-.body-leasing{
-    background-color: var(--quinary); 
-}
+.body-leasing {
+ background-color: var(--quinary);
 }
 
-.body-design{
-    background-color: var(--quinary); 
+.body-design {
+ background-color: var(--quinary)
 }
 
 body::after {
