--- a/style.css
+++ b/style.css
@@ -249,13 +249,20 @@ footer {
     font-weight: 400;
     font-size: 15px;
     line-height: 1.6;
-    color: var(--primary);  
+    color: white;  
     display: grid;
-    grid-template-columns: 20% 20% 20% 20%;
-    padding: 20%;
+    grid-template-columns: 20% 30% auto;
+    padding: 10%;
     padding-top: 10%;
+    padding-left: 14%;
 
 
 }
 
+img.koncept_pic {
+    
+        max-width: 100%;
+        max-height: 88%;
+        padding-left: 20%;
+}
 /* Jens Styling end */
