--- a/style.css
+++ b/style.css
@@ -31,9 +31,6 @@
     display: block;
 }
 
-.body-design {
- background-color: var(--quinary)
-}
 
 body::after {
 	content: '';
@@ -231,6 +228,28 @@ footer {
     padding-top: 10rem;
     padding-left: 10rem;
 }
+/* Kathlyn Styling design siden start */
+
+.body-design {
+    background-color: var(--quinary)
+}
+.grid-one {
+        display: grid;
+        justify-content: start;
+        grid-template-columns: 40% 40% ; /*Make the grid smaller than the container*/
+        grid-gap: 10px;
+        padding: 10px;
+        padding-top: 10%;
+        padding-left: 15%;
+      }
+.grid-one > div {
+        text-align: center;
+        padding: 20px 0;
+        font-size: 30px;
+      }   
+ 
+
+   /* Kathlyn Styling Design siden slut */
 
 /* Jens Styling start */
 
