--- a/style.css
+++ b/style.css
@@ -250,6 +250,7 @@ footer {
         text-align: center;
         padding: 20px 0;
         font-size: 15px;
+        line-height: 1.6;
       }   
  
 
