--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body::after {
 	height: 100%;
 	z-index: 1;
 	background: rgba(0, 0, 0, 0.1);
-	box-shadow: inset 50px 100px 250px #000000, inset -50px -100px 250px #000000;
+	box-shadow: inset 25px 100px 250px #000000, inset -25px -100px 250px #000000;
 }
 
 /* Nav Bar */
@@ -115,7 +115,7 @@ p {margin: 10px 0;
 /* Logo */
 
 .containers .logo{
-    width: 220px;
+    width: 160px;
     margin: 1rem;
 }
 
@@ -195,10 +195,6 @@ footer {
     text-align: center;
 }
 
-.services {
-    
-}
-
 /* Leasing Siden */
 
 .body-leasing{
@@ -217,21 +213,28 @@ footer {
     font-size: 15px;
     color: #000;
     line-height: 1.6;
-
     display: flex;
+}
+
+.leasing-img {
+    padding-top: 9rem;
+    padding-left: 20rem;
+}
+
+.leasing-text-box {
+    color: #fff;
+    padding-top: 9rem;
+    padding-left: 10rem;
+}
+
+.leasing-text-box h4 {
+    color: var(--primary);
+}
+
+.leasing-btn {
     
 }
 
-.main-img {
-    padding-top: 10rem;
-    padding-left: 10rem;
-}
-
-.main-text-box {
-    color: #fff;
-    padding-top: 10rem;
-    padding-left: 10rem;
-}
 /* Kathlyn Styling design siden start */
 
 .body-design {
