--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 
 body::after {
 	content: '';
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -193,6 +193,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
+    z-index: 2;
 }
 
 /* Leasing Siden */
@@ -281,3 +282,6 @@ img.koncept_pic {
 }
 /* Jens Styling end */
 
+h1, h2, h3, h4, p, a {
+    z-index: 2;
+}
