nye ændringer til forsiden
h

--- a/style.css
+++ b/style.css
@@ -92,13 +92,14 @@ p {margin: 10px 0;
 
 /* Video??? */
 
-/*
+
 .video{
     position: absolute;
-    top: 200px;
-    left: 60%;
+    top: 170px;
+    left: 64%;
+    box-shadow: 0 1px 5px rgba(104, 104, 104, 1);
 }
-*/
+
 
 /* Container */
 
@@ -115,7 +116,7 @@ p {margin: 10px 0;
 /* Logo */
 
 .containers .logo{
-    width: 220px;
+    width: 160px;
     margin: 1rem;
 }
 
@@ -125,11 +126,21 @@ p {margin: 10px 0;
     position: absolute;
     z-index: 2;
     left: 100px;
-    top: 360px;
+    top: 380px;
 }
 
 .text-box h1{
+    color: var(--primary);
+}
+
+.text-box h2{
     color: #fff;
+}
+
+.text-box h3{
+    font-family: 'Roboto', sans-serif;
+    color: var(--primary);
+    text-transform: uppercase;
 }
 
 .text-box h4{
@@ -137,18 +148,13 @@ p {margin: 10px 0;
     color: var(--primary);
 }
 
-.text-box p{
-    color: #fff;
-    font-size: 15px;
-}
-
 .btn-pre{ 
-    margin-left: 70rem;
     background-color: var(--primary);
     font-family: 'Roboto', sans-serif;
     color: #000;
     padding: 8px 25px;
     font-size: 10px;
+    text-transform: uppercase;
 }
 
 .btn-pre:hover{
@@ -193,11 +199,8 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
-}
-
-.services {
-    
-}
+    z-index: 2;
+}    
 
 /* Leasing Siden */
 
