--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 
 body::after {
 	content: '';
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -142,7 +142,7 @@ p {margin: 10px 0;
     font-size: 15px;
 }
 
-.btn-pre{ 
+.index-btn-pre{ 
     margin-left: 70rem;
     background-color: var(--primary);
     font-family: 'Roboto', sans-serif;
@@ -193,6 +193,7 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
+    z-index: 2;
 }
 
 /* Leasing Siden */
@@ -232,7 +233,30 @@ footer {
 }
 
 .leasing-btn {
-    
+    background-color: var(--primary);
+    font-family: 'Roboto', sans-serif;
+    color: #000;
+    padding: 8px 25px;
+    font-size: 10px;
+    text-align: center;
+}
+
+.leasing-btn a {
+    color: #000000;
+}
+
+.leasing-container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    margin-top: 20px;
+}
+
+.leasing-box {
+    background: var(--primary);
+    text-align: center;
+    padding: 1.5rem 2rem;
+    box-shadow: ;
 }
 
 /* Kathlyn Styling design siden start */
