--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ footer {
         padding: 10px;
         padding-top: 10%;
         padding-left: 15%;
+        padding-bottom: 5rem;
       }
 .grid-one > div {
         text-align: center;
