--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ footer {
     font-weight: 400;
     font-size: 15px;
     line-height: 1.6;
-    color: #fff;  
+    color: rgb(240, 234, 234);  
     display: grid;
     grid-template-columns: 20% 30% auto;
     padding: 10%;
@@ -297,5 +297,5 @@ img.koncept_pic {
 /* Jens Styling end */
 
 h1, h2, h3, h4, p, a {
-    z-index: 2;
+    z-index: 1;
 }
