--- a/style.css
+++ b/style.css
@@ -221,11 +221,12 @@ footer {
     color: #000;
     line-height: 1.6;
     display: flex;
+    padding-left: 20.5rem;
 }
 
 .leasing-img {
-    padding-top: 9rem;
-    padding-left: 20rem;
+    padding-top: 6px;
+    padding-right: 20px;
 }
 
 .leasing-text-box {
@@ -254,15 +255,20 @@ footer {
 .leasing-container {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    margin-top: 20px;
+    grid-template-columns: repeat(auto-fit);
+    margin-top: 8.5rem;
+    display: flex;
+    flex-direction: row;
 }
 
 .leasing-box {
     background: var(--primary);
     text-align: center;
-    padding: 1.5rem 2rem;
-    box-shadow: ;
+    padding: 2rem 1rem;
+    height: 440px;
+    width: 200px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 1);
+    margin: 0.4rem;
 }
 
 /* Kathlyn Styling design siden start */
