--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ footer {
     text-align: center;
 }
 
-.leasing-btn a {
+.leasing-container a {
     color: #000000;
 }
 
@@ -271,6 +271,15 @@ footer {
     width: 200px;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 1);
     margin: 0.4rem;
+    z-index: 2;
+}
+
+.leasing-small {
+    font-size: 12px;
+}
+
+.leasing-big {
+    font-size: 24px;
 }
 
 /* Kathlyn Styling design siden start */
