--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ p {margin: 10px 0;
     padding: 8px 25px;
     font-size: 10px;
     text-transform: uppercase;
+    z-index: 2;
 }
 
 .btn-pre:hover{
